@@ -1,3 +1,8 @@
+Fri May 24 19:11:52 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/cc1/parser.y : Remove useless state management of the
+	  identifier translation in `struct_declaration'.
+
 Fri May 24 16:05:07 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* features/code_check/W0491.feature : Add scenario to reproduce abend
